--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#contacts" tabindex="-1" aria-disabled="true">Contacts</a>
           </li>
         </ul>
-        <button type="submit" class="btn btn-link" name="button">Sign in </button>
+        
       </div>
     </nav>
 
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-
+<div class="Projects">
   <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example aboutMe">
     <br id="Projects">
     <div class="projects">
@@ -115,6 +115,7 @@
 
     </div>
   </div>
+      </div>
   <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
     <div class="blank" id="Skills">
     </div>
