--- a/wd.html
+++ b/wd.html
@@ -43,7 +43,7 @@
     </div>
     <div class="col-sm-6">
       <div class="text-center">
-        <a href="https://jigyasamehra.github.io/new-drum-project/"> <img class="pro" src="pro4.jpg" alt="">
+        <a href="https://jigyasamehra.github.io/letsRoll.io/five.html"> <img class="pro" src="pro4.jpg" alt="">
           <h3>https://jigyasamehra.github.io/dice-game.github/</h3>
           <h4>Dice-Game</h4>
           <p>I used 30.5% html, 22.7% CSS and 46.8% JavaScript</p>
