--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <br><br>
         <h1>About <span class="color">Me</span> </h1>
         <div class="about">
-          <h3 class="Atext">My name is Jigyasa Mehra. I am a web developer. </h3>
-          <h3 class="Atext">I am pursuing my Btech from Netaji Subhas University of Technology in Electronics and Communication with specialization in <span class="color">Internet of Things</span>. </h3>
+          <h3 class="Atext">Hello visitors! I am Jigyasa Mehra. I came to this life on <span class="color">9th January, 2003</span>. I am from a small town - Pataudi in Haryana. I spent my 14 years in Lord Krishana International School, Jamalpur, Distt. Gurgaon.</h3>
+          <h3 class="Atext">Currently, I am pursuing Btech from Netaji Subhas University of Technology in Electronics and Communication with specialization in <span class="color">Internet of Things</span>. </h3>
         </div>
         <a href="#contacts"> <button type="button" name="button">Let's Talk</button></a>
     </div>
